fix: bug with overflow

--- a/src/components/content/Content.module.css
+++ b/src/components/content/Content.module.css
@@ -36,9 +36,11 @@
 	width: 60%;
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 936.98px) {
 	.container {
 		width: 100%;
+		padding-left: 0;
+		padding-right: 0;
 	}
 }
 @media (max-width: 767.98px) {
